--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,102 @@
-.App {
-  max-width: 350px;
-  margin: auto;
-  display: flex;
-  align-items: center;
+#root {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 form {
   border-radius: 9px;
   padding: 16px;
   width: 100%;
-  box-shadow: 0 0 20px -10px rgba(33,37,41,1);
+  height: 242px;
+  box-shadow: 0 0 20px -10px rgba(33, 37, 41, 1);
+}
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  height: 242px;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+/* .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+} */
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 242px;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the back side */
+.flip-card-back {
+  color: #121212;
+  transform: rotateY(180deg);
+  border-radius: 9px;
+  box-shadow: 0 0 20px -10px rgba(33, 37, 41, 1);
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.flip-card-back h1 {
+  margin-bottom: 32px;
+}
+
+.flip-card-back h3 {
+  font-size: 24px;
+  color: rgb(33 37 41 / 79%);
+}
+
+.btn-primary {
+  position: relative;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.btn_loader:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 339%;
+  width: 30px;
+  height: 30px;
+  margin-top: -15px;
+  margin-left: -15px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  border-top-color: #07d;
+  animation: spinner 0.6s linear infinite;
+}
+
+.btn_loader {
+  background-color: #6c757d !important;
+  border-color: #6c757d !important;
+  cursor: not-allowed !important;
 }
