--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,15 +9,14 @@ form {
   border-radius: 9px;
   padding: 16px;
   width: 100%;
-  height: 242px;
+  height: fit-content;
   box-shadow: 0 0 20px -10px rgba(33, 37, 41, 1);
 }
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
-  width: 300px;
-  height: 200px;
+  width: 400px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
@@ -26,22 +24,17 @@ form {
 .flip-card-inner {
   position: relative;
   width: 100%;
+  height: 100%;
   transition: transform 0.8s;
   transform-style: preserve-3d;
-  height: 242px;
 }
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-/* .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-} */
 
 /* Position the front and back side */
 .flip-card-front,
 .flip-card-back {
   position: absolute;
   width: 100%;
-  height: 242px;
+  height: 352px;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
@@ -84,7 +77,7 @@ form {
   box-sizing: border-box;
   position: absolute;
   top: 50%;
-  left: 339%;
+  left: 350px;
   width: 30px;
   height: 30px;
   margin-top: -15px;
